利用广播实现，思考再换一种更优雅简单的方式

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ABmob</string>
+    <string name="main">MainActivity</string>
+    <string name="home">HomeActivity</string>
 </resources>
