广播式 的架构实现复杂，多对多情景代码隔离性不好，换用service+观察者模式，主进程维护一份 tagTable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ABmob</string>
     <string name="main">MainActivity</string>
     <string name="home">HomeActivity</string>
+    <string name="main2">Main2Activity</string>
 </resources>
