fix some gradle error

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ABmob</string>
+    <string name="app_name">Avatar</string>
     <string name="main">MainActivity</string>
     <string name="home">HomeActivity</string>
     <string name="main2">Main2Activity</string>
